I updated the supabase key

--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
     <script>
         // ==================== CONFIGURATION ====================
         const SUPABASE_URL = 'https://lveejxxuvwikbitdbmbw.supabase.co';
-        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx2ZWVqeHh1dndpa2JpdGRibWJ3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzQxMjkxNzQsImV4cCI6MjA0OTcwNTE3NH0.e7HlIVPXMwQQllS3nVqUDh1aUHiFhz2pBWKqG9BNZPM';
+        const SUPABASE_KEY = 'sb_publishable_5wqWoM5FlCNJDNRhxgMFdA_9vzgwd6U';
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
         // ==================== GLOBAL STATE ====================
