superbase key added

--- a/index.html
+++ b/index.html
@@ -811,8 +811,8 @@
 // =========================================================
 //  CONFIG
 // =========================================================
-const SUPABASE_URL = 'https://lveejxxuvwikbitdbmbw.supabase.co';
-const SUPABASE_KEY = 'sb_publishable_5wqWoM5FlCNJDNRhxgMFdA_9vzgwd6U';
+const SUPABASE_URL = 'https://asupemsmwzrovucpvqyt.supabase.co';
+const SUPABASE_KEY = 'sb_publishable_h3Kb-0pknHcYItkGeyEI-Q_urYDrPD9';
 const sb = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
 // =========================================================
