--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>NonStop Travels — AMS</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&family=DM+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,400;12..96,500;12..96,600;12..96,700;12..96,800&family=Manrope:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
@@ -27,8 +27,8 @@
     --danger:     #dc2626;
   }
 
-  * { font-family: 'DM Sans', sans-serif; box-sizing: border-box; }
-  h1,h2,h3,h4,.syne { font-family: 'Syne', sans-serif; }
+  * { font-family: 'Manrope', sans-serif; box-sizing: border-box; }
+  h1,h2,h3,h4,.syne { font-family: 'Bricolage Grotesque', sans-serif; }
   body { background: var(--surface); color: var(--text); }
 
   /* ===== SCROLLBAR ===== */
